update docker compose

--- a/docker/mysql/docker-compose.yml
+++ b/docker/mysql/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         restart: always
         environment:
             MYSQL_USER: 'dbuser'
+            MYSQL_DATABASE: 'nus-iss-grp1-db'
             MYSQL_PASSWORD: 'nus-iss-grp1-db-password'
             MYSQL_ROOT_PASSWORD: 'lgf7;UISU^_Cpp7%0%NP=*6=Hc02A1b8'
         deploy:
@@ -16,6 +17,8 @@ services:
                 delay: 5s
                 max_attempts: 3
                 window: 120s
+        volumes:
+            dbdata:/opt/docker/mysql/volumes
         ports:
             - '3306:3306'
             - '33060:33060'
