fix frontend router

--- a/backend/user/src/main/resources/application.properties
+++ b/backend/user/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-server.port = 8083
+server.port = 8082
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 datasource.url = jdbc:mysql://localhost:3306/easymarket?autoReconnect=true&useSSL=false&serverTimezone=UTC
 datasource.username = easymarketuser
 datasource.password = easymarketpassword
+#datasource.url = jdbc:mysql://3.0.147.95/nus-iss-grp1-db
+#datasource.username = dbuser
+#datasource.password = nus-iss-grp1-db-password
 datasource.driverClassName=com.mysql.jdbc.Driver
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
