--- a/backend/product/dockerfile
+++ b/backend/product/dockerfile
@@ -5,5 +5,5 @@ FROM tomcat:9.0.82-jdk8-corretto
 MAINTAINER "nus-iss-grp1" 
 
 # Copy to war file to tomcat path  
-ADD target/cart-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/ 
+ADD target/product-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/ 
 
