--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,25 +17,26 @@
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "adm-zip": ">=0.4.11",
     "angular-webstorage-service": "^1.0.2",
     "bootstrap": ">=4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "lodash": ">=4.17.13",
-    "lodash.mergewith": ">=4.6.2",
     "handlebars": ">=4.1.0",
     "js-yaml": ">=3.13.1",
-    "ws": ">=3.3.1",
+    "lodash": ">=4.17.13",
+    "lodash.mergewith": ">=4.6.2",
+    "rxjs": "^6.0.0",
     "tar": ">=2.2.2",
     "webpack-dev-server": ">=3.1.11",
-    "adm-zip": ">=0.4.11",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0"
+    "ws": ">=3.3.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
