--- a/backend/product/dockerfile
+++ b/backend/product/dockerfile
@@ -5,5 +5,9 @@ FROM tomcat:9.0.82-jdk8-corretto
 MAINTAINER "nus-iss-grp1" 
 
 # Copy to war file to tomcat path  
-ADD target/product-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/ 
+ADD target/product-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/product.war
 
+EXPOSE 8080
+
+# Start the tomcat server
+CMD ["catalina.sh", "run"]
