--- a/backend/product/pom.xml
+++ b/backend/product/pom.xml
@@ -89,6 +89,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		
 	</dependencies>
 
