--- a/backend/product/src/main/resources/application.properties
+++ b/backend/product/src/main/resources/application.properties
@@ -24,3 +24,5 @@ logging.level.org.hibernate: ERROR
 spring.activemq.broker-url = tcp://localhost:61616
 spring.activemq.user = admin
 spring.activemq.password = admin
+
+server.servlet.context-path=/product
