change db for testing

--- a/backend/user/src/main/resources/application.properties
+++ b/backend/user/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port = 8082
+# server.port = 8082
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-datasource.url = jdbc:mysql://localhost:3306/easymarket?autoReconnect=true&useSSL=false&serverTimezone=UTC
-datasource.username = easymarketuser
-datasource.password = easymarketpassword
+datasource.url = jdbc:mysql://3.0.162.33:3306/nus-iss-grp1-db?autoReconnect=true&useSSL=false&serverTimezone=UTC
+datasource.username = dbuser
+datasource.password = nus-iss-grp1-db-password
 #datasource.url = jdbc:mysql://3.0.147.95/nus-iss-grp1-db
 #datasource.username = dbuser
 #datasource.password = nus-iss-grp1-db-password
