--- a/backend/user/dockerfile
+++ b/backend/user/dockerfile
@@ -5,9 +5,4 @@ FROM tomcat:9.0.82-jdk8-corretto
 MAINTAINER "nus-iss-grp1" 
 
 # Copy to war file to tomcat path  
-ADD target/user-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/user.war
-
-EXPOSE 8080
-
-# Start the tomcat server
-CMD ["catalina.sh", "run"]
+ADD target/user.war /usr/local/tomcat/webapps/user.war
