--- a/backend/cart/src/main/resources/application.properties
+++ b/backend/cart/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port = 8084
+# server.port = 8084
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-datasource.url = jdbc:mysql://localhost:3306/easymarket?autoReconnect=true&useSSL=false&serverTimezone=UTC
-datasource.username = easymarketuser
-datasource.password = easymarketpassword
+datasource.url = jdbc:mysql://3.0.162.33:3306/nus-iss-grp1-db?autoReconnect=true&useSSL=false&serverTimezone=UTC
+datasource.username = dbuser
+datasource.password = nus-iss-grp1-db-password
 datasource.driverClassName=com.mysql.jdbc.Driver
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
